# wakuchin-rs

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: release-drafter.yml  rust-clippy.yml  rust-doc.yml  rust-publish.yml  rust-release.yml  rust.yml
cli/: Cargo.toml  README.md  build.rs
cli/src/: app.rs  config.rs  error.rs  handlers.rs  hit.rs  main.rs
core/: Cargo.toml  README.md
core/benches/: bench_core.rs
core/benches/benchmarks/: worker.rs
core/src/: builder.rs  channel.rs  convert.rs  error.rs  handlers.rs  hit.rs  lib.rs  progress.rs  render.rs  result.rs  symbol.rs  utils.rs  worker.rs
core/src/handlers/: builtin.rs  empty.rs  msgpack.rs
core/src/hit/: counter.rs  store.rs
core/src/worker/: error.rs  mod.rs
examples/: invalid-regex.yml  quick-research-json.toml  quick-research.toml  syntax-error.json  tries-300000000.toml
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/wakuchin/handlers/: trait.RefCellWrapper.js
src/wakuchin/: app.rs.html  builder.rs.html  channel.rs.html  convert.rs.html  error.rs.html  handlers.rs.html  hit.rs.html  lib.rs.html  main.rs.html  progress.rs.html  render.rs.html  result.rs.html  symbol.rs.html  utils.rs.html  worker.rs.html
src/wakuchin/handlers/: empty.rs.html  msgpack.rs.html
src/wakuchin/hit/: counter.rs.html  store.rs.html
src/wakuchin/worker/: error.rs.html  mod.rs.html
src/wakuchin_core/: convert.rs.html  lib.rs.html  result.rs.html  symbol.rs.html  worker.rs.html
wakuchin/: all.html  fn.check.html  fn.gen.html  fn.gen_vec.html  fn.main.html  fn.run.html  fn.validate.html  fn.validate_external.html  index.html  sidebar-items.js  type.Result.html
wakuchin/app/: fn.value_parser_format.html  index.html  sidebar-items.js  struct.App.html  struct.Args.html  type.AnyhowResult.html
wakuchin/builder/: index.html  sidebar-items.js  struct.ResearchBuilder.html
wakuchin/convert/: fn.chars_to_wakuchin.html  fn.wakuchin_to_chars.html  index.html  sidebar-items.js
wakuchin/error/: enum.Error.html  enum.WakuchinError.html  index.html  sidebar-items.js
wakuchin/handlers/: index.html  sidebar-items.js  trait.ProgressHandler.html  trait.RefCellWrapper.html
wakuchin/handlers/empty/: index.html  sidebar-items.js  struct.EmptyProgressHandler.html
wakuchin/handlers/msgpack/: fn.progress.html  index.html  sidebar-items.js  struct.BuiltinProgressHandler.html  struct.MsgpackBase64ProgressHandler.html  struct.MsgpackProgressHandler.html
wakuchin/hit/: fn.hit.html  index.html  sidebar-items.js
wakuchin/progress/: enum.ProgressKind.html  index.html  sidebar-items.js  struct.DoneDetail.html  struct.IdleDetail.html  struct.ProcessingDetail.html  struct.Progress.html
wakuchin/result/: enum.ResultOutputFormat.html  fn.out.html  index.html  sidebar-items.js  struct.Hit.html  struct.HitCount.html  struct.HitCounter.html  struct.WakuchinResult.html
wakuchin/symbol/: constant.WAKUCHIN.html  constant.WAKUCHIN_C.html  constant.WAKUCHIN_EXTERNAL.html  constant.WAKUCHIN_EXTERNAL_C.html  constant.WAKUCHIN_EXTERNAL_K.html  constant.WAKUCHIN_EXTERNAL_N.html  constant.WAKUCHIN_EXTERNAL_W.html  constant.WAKUCHIN_K.html  constant.WAKUCHIN_N.html  constant.WAKUCHIN_W.html  index.html  sidebar-items.js
wakuchin/worker/: enum.Error.html  fn.run_par.html  fn.run_seq.html  index.html  sidebar-items.js
wakuchin/worker/error/: enum.Error.html
wakuchin_core/: all.html  fn.check.html  fn.gen.html  fn.gen_vec.html  fn.validate.html  fn.validate_external.html  index.html
wakuchin_core/convert/: fn.chars_to_wakuchin.html  fn.wakuchin_to_chars.html  index.html  sidebar-items.js
wakuchin_core/result/: enum.ResultOutputFormat.html  fn.out.html  index.html  sidebar-items.js  struct.Hit.html  struct.WakuchinResult.html
wakuchin_core/symbol/: constant.WAKUCHIN.html  constant.WAKUCHIN_C.html  constant.WAKUCHIN_EXTERNAL.html  constant.WAKUCHIN_EXTERNAL_C.html  constant.WAKUCHIN_EXTERNAL_K.html  constant.WAKUCHIN_EXTERNAL_N.html  constant.WAKUCHIN_EXTERNAL_W.html  constant.WAKUCHIN_K.html  constant.WAKUCHIN_N.html  constant.WAKUCHIN_W.html  index.html  sidebar-items.js
wakuchin_core/worker/: fn.run_par.html  fn.run_seq.html  index.html  sidebar-items.js
