[package]
name = "wakuchin_cli"
version = "0.2.0"
authors = ["P2P-Develop"]
categories = [ "command-line-utilities", "science" ]
keywords = [ "cli" ]
default-run = "wakuchin"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/P2P-Develop/wakuchin-rs"
description = "A next generation wakuchin researcher software written in Rust"
readme = "README.md"

[[bin]]
name = "wakuchin"
path = "src/main.rs"

[build-dependencies]
wakuchin = { version = "0.2.0", path = "../core" }

[dependencies]
wakuchin = { version = "0.2.0", path = "../core" }

anyhow = "1.0"
atty = "0.2"
clap = { version = "3.2", features = ["cargo", "derive"] }
crossterm = "0.24"
inquire = "0.2"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.8"
tokio = { version = "=1.20", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.5"
