[package]
name = "wakuchin_cli"
version = "0.3.0"
authors = ["P2P-Develop"]
categories = ["command-line-utilities", "science"]
keywords = ["cli"]
default-run = "wakuchin"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/P2P-Develop/wakuchin-rs"
description = "A next generation wakuchin researcher software written in Rust"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "wakuchin"
path = "src/main.rs"

[features]
sequential = []
simd-accel = ["wakuchin/simd-accel"]

[build-dependencies]
shadow-rs = "0.19"

[dependencies]
wakuchin = { version = "0.3.0", path = "../core" }

anyhow = "1.0"
atty = "0.2"
clap = { version = "4.0", features = ["cargo", "derive"] }
clap-serde-derive = "0.2"
console = "0.15"
crossterm = "0.25"
dialoguer = { version = "0.10", default-features = false }
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error", rev = "b114501c468bfe4f0a8c3f48f84530414bdeeaa1" }
human_format = "1.0"
humantime = "2.1"
humantime-serde = "1.1"
itoa = "1.0"
once_cell = "1.16"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "=0.8"
shadow-rs = "0.19"
thiserror = "1.0"
tokio = { version = "=1.21", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
toml = "0.5"

[target.'cfg(all(not(target_os = "android"), not(target_env = "msvc")))'.dependencies]
tikv-jemallocator = "0.5"
