[package]
name = "wakuchin"
version = "0.2.0"
authors = ["P2P-Develop"]
categories = ["science", "text-processing"]
keywords = ["text"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/P2P-Develop/wakuchin-rs"
description = "A next generation wakuchin researcher software written in Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
simd-accel = ["simd-json"]

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[dependencies]
dashmap = "5.3"
divide_range = "0.1"
fastrand = "1.8"
flume = "0.10"
itoa = "1.0"
itertools = "0.10"
num_cpus = "1.13"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.6", optional = true }
smooth = "0.1"
thiserror = "1.0"
tokio = { version = "=1.21", features = ["sync", "time"] }

[[bench]]
name = "bench_core"
harness = false
