[package]
name = "wakuchin"
version = "0.3.0"
authors = ["P2P-Develop"]
categories = ["science", "text-processing"]
keywords = ["text"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/P2P-Develop/wakuchin-rs"
description = "A next generation wakuchin researcher software written in Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
simd-accel = ["simd-json"]
stdweb = ["instant/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen"]

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[dependencies]
anyhow = "1.0"
base64 = "0.20"
dashmap = "5.3"
divide_range = "0.1"
fastrand = "1.8"
flume = "0.10"
instant = "0.1"
itoa = "1.0"
itertools = "0.10"
parking_lot = "0.12"
regex = "1.7"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.6", optional = true }
smooth = "0.1"
thiserror = "1.0"
tokio = { version = "=1.24", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = { version = "3.2", features = ["termination"] }

[[bench]]
name = "bench_core"
harness = false
