[package]
name = "wakuchin"
version = "0.3.0"
authors = ["P2P-Develop"]
categories = ["science", "text-processing"]
keywords = ["text"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/P2P-Develop/wakuchin-rs"
description = "A next generation wakuchin researcher software written in Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
stdweb = ["instant/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.4" }

[dependencies]
anyhow = "1.0"
base64 = "0.21"
dashmap = "5.3"
divide_range = "0.1"
fastrand = "1.8"
flume = "0.10"
instant = "0.1"
itoa = "1.0"
itertools = "0.10"
regex = "1.7"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smooth = "0.1"
thiserror = "1.0"
tokio = { version = "=1.24", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
signal-hook = "0.3"
signal-hook-registry = "1.4"

[[bench]]
name = "bench_core"
harness = false
